@@ -3,16 +3,13 @@
   <parent>
     <groupId>org.opennms.features</groupId>
     <artifactId>org.opennms.features.events</artifactId>
-    <version>18.0.0-SNAPSHOT</version>
+    <version>19.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.opennms.features.events</groupId>
   <artifactId>org.opennms.features.events.syslog</artifactId>
   <name>OpenNMS :: Features :: Events :: Syslog Daemon</name>
   <packaging>bundle</packaging>
-  <properties>
-    <skipITs>true</skipITs>
-  </properties>
   <build>
     <plugins>
       <plugin>
@@ -28,23 +25,54 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.16</version>
-        <configuration>
-          <skipITs>${skipITs}</skipITs>
-          <argLine>-Xmx1g -Djava.endorsed.dirs=${basedir}/target/endorsed</argLine>
-          <systemPropertyVariables>
-            <opennms.home>${project.build.testOutputDirectory}</opennms.home>
-            <java.endorsed.dirs>${basedir}/target/endorsed</java.endorsed.dirs>
-          </systemPropertyVariables>
-        </configuration>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
         <executions>
           <execution>
+            <id>attach-artifacts</id>
+            <phase>package</phase>
             <goals>
-              <goal>integration-test</goal>
-              <goal>verify</goal>
+              <goal>attach-artifact</goal>
             </goals>
+            <configuration>
+              <artifacts>
+                <artifact>
+                  <file>blueprint-syslog-handler-default.xml</file>
+                  <type>xml</type>
+                  <classifier>blueprint-syslog-handler-default</classifier>
+                </artifact>
+                <artifact>
+                  <file>blueprint-syslog-handler-kafka.xml</file>
+                  <type>xml</type>
+                  <classifier>blueprint-syslog-handler-kafka</classifier>
+                </artifact>
+                <artifact>
+                  <file>blueprint-syslog-handler-minion.xml</file>
+                  <type>xml</type>
+                  <classifier>blueprint-syslog-handler-minion</classifier>
+                </artifact>
+                <artifact>
+                  <file>blueprint-syslog-listener-javanet.xml</file>
+                  <type>xml</type>
+                  <classifier>blueprint-syslog-listener-javanet</classifier>
+                </artifact>
+                <artifact>
+                  <file>blueprint-syslog-listener-camel-netty.xml</file>
+                  <type>xml</type>
+                  <classifier>blueprint-syslog-listener-camel-netty</classifier>
+                </artifact>
+                <artifact>
+                  <file>blueprint-syslog-listener-nio.xml</file>
+                  <type>xml</type>
+                  <classifier>blueprint-syslog-listener-nio</classifier>
+                </artifact>
+                <artifact>
+                  <file>blueprint-syslog-handler-kafka-default.xml</file>
+                  <type>xml</type>
+                  <classifier>blueprint-syslog-handler-kafka-default</classifier>
+                </artifact>
+              </artifacts>
+            </configuration>
           </execution>
         </executions>
       </plugin>
@@ -55,6 +83,10 @@
       <groupId>org.opennms.dependencies</groupId>
       <artifactId>camel-dependencies</artifactId>
       <type>pom</type>
+    </dependency>
+    <dependency>
+      <groupId>org.opennms.core</groupId>
+      <artifactId>org.opennms.core.camel</artifactId>
     </dependency>
     <dependency>
       <groupId>org.opennms.core</groupId>
@@ -83,8 +115,32 @@
       <artifactId>junit</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.opennms</groupId>
-      <artifactId>opennms-test</artifactId>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-kafka</artifactId>
+      <version>${camelVersion}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>javax.xml.bind</groupId>
+          <artifactId>jaxb-api</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.sun.xml.bind</groupId>
+          <artifactId>jaxb-impl</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+        </exclusion>
+        <!-- snappy-java has OSGi loading problems because of JNI bits -->
+        <exclusion>
+          <groupId>org.xerial.snappy</groupId>
+          <artifactId>snappy-java</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.opennms</groupId>
@@ -93,8 +149,9 @@
     </dependency>
     <dependency>
       <groupId>org.opennms</groupId>
-      <artifactId>opennms-dao</artifactId>
-      <type>test-jar</type>
+      <artifactId>opennms-dao-minion</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.opennms</groupId>
@@ -120,6 +177,12 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.opennms.features.minion</groupId>
+      <artifactId>core-api</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-icmp-jna</artifactId>
       <scope>test</scope>
@@ -134,5 +197,36 @@
       <artifactId>org.opennms.features.collection.persistence.rrd</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.opennms.core.test-api</groupId>
+      <artifactId>org.opennms.core.test-api.activemq</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.opennms.core.test-api</groupId>
+      <artifactId>org.opennms.core.test-api.camel</artifactId>
+      <scope>test</scope>
+    </dependency>
+    
+    <!-- HZN-742 -->
+    <dependency>
+	 <groupId>org.apache.curator</groupId>
+	 <artifactId>curator-test</artifactId>
+	 <version>${curatorVersion}</version>
+	 <scope>test</scope>
+	 <exclusions>
+	 	<exclusion>
+	 		<artifactId>log4j</artifactId>
+	 		<groupId>log4j</groupId>
+	 	</exclusion>
+	 	<exclusion>
+	 		<artifactId>slf4j-log4j12</artifactId>
+	 		<groupId>org.slf4j</groupId>
+	 	</exclusion>
+	 </exclusions>
+    </dependency>
+
+	<!-- end of  HZN-742-->
+    
   </dependencies>
 </project>
